--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "handlebars-helpers": "^0.10.0",
     "inquirer": "^8.1.2",
     "pluralize": "^8.0.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "highlight.js": ">=10.4.1",
+    "set-value": ">=4.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
